apps/redis-insight/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
  labels:
    app.kubernetes.io/name: redis-insight
    app.kubernetes.io/instance: redis-insight
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5540
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis-insight
    app.kubernetes.io/instance: redis-insight
